# commonword

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
.circleci/: config.yml
backend/: .dockerignore  Commonword.sln  Directory.Build.props  Directory.Packages.props  Dockerfile
backend/src/Commonword.Api/: Commonword.Api.csproj  Commonword.Api.http  DesignTimeDbContextFactory.cs  Program.cs  appsettings.Development.json  appsettings.json
backend/src/Commonword.Api/Properties/: launchSettings.json
backend/src/Commonword.Contracts/Puzzles/: PuzzleDtos.cs
backend/src/Commonword.Contracts/Solving/: SolvingDtos.cs
backend/src/Commonword.Contracts/Telemetry/: TelemetryDtos.cs
backend/src/Commonword.Infrastructure/: Commonword.Infrastructure.csproj  ServiceCollectionExtensions.cs
backend/src/Commonword.Infrastructure/Auth/: AdminKeyEndpointFilter.cs
backend/src/Commonword.Infrastructure/Persistence/: AppDbContext.cs
backend/tests/Commonword.Tests.Integration/: Commonword.Tests.Integration.csproj  SampleTests.cs
backend/tests/Commonword.Tests.Unit/: Commonword.Tests.Unit.csproj  SampleTests.cs
clients/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
clients/apps/android-native/: build.gradle.kts  settings.gradle.kts
clients/apps/tauri/: package.json  tsconfig.json  vite.config.ts
clients/apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
clients/apps/tauri/src-tauri/src/: lib.rs  main.rs
clients/apps/web/: index.html  package.json  vite.config.ts
docs/: architecture.md
docs/decisions/: 0001-architecture.md
(+46 files in other folders)
