[package]
name = "commonword-tauri"
version = "0.1.0"
description = "Commonword Tauri shell"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }

[lib]
name = "commonword_tauri"
path = "src/lib.rs"

[[bin]]
name = "commonword-tauri"
path = "src/main.rs"
